packages/coln-compiler/test/golden/ssa.output
-- elaborated
global entry named OpInfo
in mode: Conjunctive
type: Theory
value: sig
  OpType : Set
  inputArity : OpType -> Set
  outputArity : OpType -> Set
end

-- messages

debug[D0316]: cannot use inductively bound variable in a conjunctive context
2 |   refl : (x : X) -> P x x
2 |                     ^

debug[D0316]: cannot use inductively bound variable in a conjunctive context
13 |   next/prev : (x : car) -> next (prev x) = x
13 |                                            ^

debug[D0316]: cannot use inductively bound variable in a conjunctive context
32 |   fwd : A -> B
32 |              ^

debug[D0316]: cannot use inductively bound variable in a conjunctive context
39 |   opType : opInfo.OpType
39 |            ^^^^^^

debug[D0316]: cannot use inductively bound variable in a conjunctive context
45 |   y : X
45 |       ^

error[E0314]: no such variable LinearOrder in scope
51 |   ops : LinearOrder
51 |         ^^^^^^^^^^^

error[E0314]: no such variable Block in scope
65 |   ops : (r : RegionId) -> BlockId r -> Block opInfo
65 |                                        ^^^^^
